@@ -87,44 +87,55 @@
 
 
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.20.1</version>
-        <executions>
-          <execution>
-            <phase>integration-test</phase>
-<!--            <goals>-->
-<!--              <goal></goal>-->
-<!--            </goals>-->
-          <configuration>
-            <forkCount>3</forkCount>
-            <reuseForks>true</reuseForks>
-          <argLine>
-            -javaagent:"${settings.localRepository}\org\aspectj\aspectjweaver\${aspectj.version}\aspectjweaver-${aspectj.version}.jar"
-          </argLine>
-          <testFailureIgnore>true</testFailureIgnore>
-          <suiteXFiles>
-            <file>src/test/ressources/testrunners/testng_regressions.xml</file>
-          </suiteXFiles>
-            <annotationProcessorPaths>
-              <path>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok</artifactId>
-                <version>1.18.20</version>
-              </path>
-            </annotationProcessorPaths>
-        </configuration>
-          </execution>
-        </executions>
-        <dependencies>
-          <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjweaver</artifactId>
-            <version>${aspectj.version}</version>
-          </dependency>
-        </dependencies>
-      </plugin>
+<!--      <plugin>-->
+<!--        <groupId>org.apache.maven.plugins</groupId>-->
+<!--        <artifactId>maven-surefire-plugin</artifactId>-->
+<!--        <version>2.20.1</version>-->
+<!--        <executions>-->
+<!--          <execution>-->
+<!--            <phase>integration-test</phase>-->
+<!--&lt;!&ndash;            <goals>&ndash;&gt;-->
+<!--&lt;!&ndash;              <goal></goal>&ndash;&gt;-->
+<!--&lt;!&ndash;            </goals>&ndash;&gt;-->
+<!--          <configuration>-->
+<!--            <forkCount>3</forkCount>-->
+<!--            <reuseForks>true</reuseForks>-->
+<!--          <argLine>-->
+<!--            -javaagent:"${settings.localRepository}\org\aspectj\aspectjweaver\${aspectj.version}\aspectjweaver-${aspectj.version}.jar"-->
+<!--          </argLine>-->
+<!--          <testFailureIgnore>true</testFailureIgnore>-->
+<!--          <suiteXFiles>-->
+<!--            <file>src/test/ressources/testrunners/testng_regressions.xml</file>-->
+<!--          </suiteXFiles>-->
+<!--            <annotationProcessorPaths>-->
+<!--              <path>-->
+<!--                <groupId>org.projectlombok</groupId>-->
+<!--                <artifactId>lombok</artifactId>-->
+<!--                <version>1.18.20</version>-->
+<!--              </path>-->
+<!--            </annotationProcessorPaths>-->
+<!--        </configuration>-->
+<!--          </execution>-->
+<!--        </executions>-->
+<!--        <dependencies>-->
+<!--          <dependency>-->
+<!--            <groupId>org.aspectj</groupId>-->
+<!--            <artifactId>aspectjweaver</artifactId>-->
+<!--            <version>${aspectj.version}</version>-->
+<!--          </dependency>-->
+<!--        </dependencies>-->
+<!--      </plugin>-->
+
+<!--      <plugin>-->
+<!--        <groupId>org.apache.maven.plugins</groupId>-->
+<!--        <artifactId>maven-compiler-plugin</artifactId>-->
+<!--        <version>3.8.1</version>-->
+<!--        <configuration>-->
+<!--          <source>1.8</source>-->
+<!--          <target>1.8</target>-->
+<!--        </configuration>-->
+<!--      </plugin>-->
+
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -135,6 +146,28 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.20</version>
+
+        <configuration>
+          <forkCount>3</forkCount>
+          <reuseForks>true</reuseForks>
+          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+          <suiteXmlFiles>
+            <suiteXmlFile>src/test/resources/testrunners/testng_regressions.xml</suiteXmlFile>
+            <!-- <suiteXmlFile>${suiteXmlFile}</suiteXmlFile> -->
+
+          </suiteXmlFiles>
+
+
+
+        </configuration>
+      </plugin>
+
 
     </plugins>
 
